# durable-execution-rust-sdk

./: .gitignore  CONTRIBUTING.md  README.md  deny.toml
aws-durable-execution-sdk/: Cargo.toml  cliff.toml  deny.toml  release-plz.toml
aws-durable-execution-sdk/docs/: DETERMINISM.md  LIMITS.md  MIGRATION.md  TRACING.md  language_sdk_specification.md
aws-durable-execution-sdk/examples/: Cargo.toml  README.md  callback_workflow.rs  parallel_processing.rs  simple_workflow.rs
aws-durable-execution-sdk/examples/callback/concurrent/: callback_concurrent.rs
aws-durable-execution-sdk/examples/callback/simple/: callback_simple.rs
aws-durable-execution-sdk/examples/callback/wait_for_callback/: wait_for_callback.rs
aws-durable-execution-sdk/examples/callback/with_timeout/: callback_timeout.rs
aws-durable-execution-sdk/examples/child_context/basic/: child_context_basic.rs
aws-durable-execution-sdk/examples/child_context/nested/: child_context_nested.rs
aws-durable-execution-sdk/examples/comprehensive/: order_workflow.rs
aws-durable-execution-sdk/examples/error_handling/: step_error.rs
aws-durable-execution-sdk/examples/hello_world/: hello_world.rs
aws-durable-execution-sdk/examples/invoke/basic/: invoke_basic.rs
aws-durable-execution-sdk/examples/logging/: custom_logger.rs
aws-durable-execution-sdk/examples/map/basic/: map_basic.rs
aws-durable-execution-sdk/examples/map/failure_tolerance/: map_failure_tolerance.rs
aws-durable-execution-sdk/examples/map/min_successful/: map_min_successful.rs
aws-durable-execution-sdk/examples/map/with_concurrency/: map_concurrency.rs
aws-durable-execution-sdk/examples/multiple_waits/: multiple_waits.rs
aws-durable-execution-sdk/examples/parallel/basic/: parallel_basic.rs
aws-durable-execution-sdk/examples/parallel/first_successful/: parallel_first_successful.rs
aws-durable-execution-sdk/examples/parallel/heterogeneous/: parallel_heterogeneous.rs
aws-durable-execution-sdk/examples/promise_combinators/all/: promise_all.rs
aws-durable-execution-sdk/examples/promise_combinators/all_settled/: promise_all_settled.rs
aws-durable-execution-sdk/examples/promise_combinators/any/: promise_any.rs
aws-durable-execution-sdk/examples/promise_combinators/race/: promise_race.rs
aws-durable-execution-sdk/examples/replay_safe/: uuid_generation.rs
aws-durable-execution-sdk/examples/serde/: custom_serialization.rs
aws-durable-execution-sdk/examples/src/: lib.rs  test_helper.rs
aws-durable-execution-sdk/examples/step/basic/: step_basic.rs
aws-durable-execution-sdk/examples/step/named/: step_named.rs
aws-durable-execution-sdk/examples/step/with_config/: step_with_config.rs
aws-durable-execution-sdk/examples/tests/: advanced_tests.rs  callback_tests.rs  child_context_tests.rs  cloud_integration_tests.rs  comprehensive_tests.rs  concurrency_tests.rs  context_validation_tests.rs  error_handling_tests.rs  hello_world_tests.rs  invoke_tests.rs  parallel_map_tests.rs  promise_combinator_tests.rs  serde_tests.rs  step_tests.rs  wait_tests.rs
aws-durable-execution-sdk/examples/tests/history/: all_with_wait.history.json  callback_concurrent.history.json  callback_custom_serdes.history.json  callback_failure.history.json  callback_heartbeat.history.json  callback_mixed_ops.history.json  callback_simple.history.json  callback_with_timeout.history.json  checkpointing_batched.history.json  checkpointing_eager.history.json  checkpointing_optimistic.history.json  child_context_basic.history.json  child_context_checkpoint_size_limit.history.json  child_context_large_data.history.json  child_context_nested.history.json  child_context_with_failing_step.history.json  concurrent_callback_submitter.history.json  concurrent_callback_wait.history.json  map_basic.history.json  (+64 more)
aws-durable-execution-sdk/macros/: CHANGELOG.md  Cargo.toml  README.md
aws-durable-execution-sdk/macros/src/: lib.rs
aws-durable-execution-sdk/proptest-regressions/: serdes.txt
aws-durable-execution-sdk/sdk/: CHANGELOG.md  Cargo.toml  README.md
aws-durable-execution-sdk/sdk/src/: client.rs  concurrency.rs  config.rs  context.rs  duration.rs  error.rs  handlers.rs  lambda.rs  lib.rs  macros.rs  operation.rs  replay_safe.rs  retry_presets.rs  runtime.rs  serdes.rs  structured_json_logger.rs  summary_generators.rs  termination.rs  traits.rs  types.rs
aws-durable-execution-sdk/sdk/tests/: common_tests.rs  concurrency_patterns.rs  replay_scenarios.rs  wait_for_callback_tests.rs
aws-durable-execution-sdk/src/: client.rs  concurrency.rs  config.rs  context.rs  duration.rs  error.rs  handlers.rs  lambda.rs  lib.rs  macros.rs  operation.rs  replay_safe.rs  sealed.rs  serdes.rs  state.rs  traits.rs  types.rs
aws-durable-execution-sdk/src/docs/: limits.rs
aws-durable-execution-sdk/src/handlers/: callback.rs  child.rs  invoke.rs  map.rs  parallel.rs  promise.rs  replay.rs  step.rs  wait.rs  wait_for_condition.rs
aws-durable-execution-sdk/src/state/: batcher.rs  checkpoint_result.rs  execution_state.rs  mod.rs  replay_status.rs
aws-durable-execution-sdk/testing/: CHANGELOG.md  Cargo.toml  README.md
aws-durable-execution-sdk/testing/proptest-regressions/: local_runner.txt
aws-durable-execution-sdk/testing/src/: cloud_runner.rs  error.rs  history_poller.rs  lib.rs  local_runner.rs  mock_client.rs  nodejs_event_pbt.rs  operation.rs  operation_handle.rs  run_future.rs  test_result.rs  time_control.rs  types.rs
aws-durable-execution-sdk/testing/tests/: callback_round_trip_tests.rs  cross_sdk_format_tests.rs
aws-durable-execution-sdk/tests/: common_tests.rs  concurrency_patterns.rs  macro_compile_fail_tests.rs  replay_scenarios.rs  wait_for_callback_tests.proptest-regressions  wait_for_callback_tests.rs
aws-durable-execution-sdk/tests/common/: mod.rs
aws-durable-execution-sdk/tests/compile_fail/: all_settled_type_mismatch.rs  all_settled_type_mismatch.stderr  all_type_mismatch.stderr  race_type_mismatch.rs
examples/callback_workflows/rust_app/: Cargo.toml
examples/parrallel_processing/rust_app/: Cargo.toml
examples/simple_workflow/rust_app/: Cargo.toml
(+120 files in other folders)
