[workspace]
resolver = "2"
members = [
    "sdk",
    "testing",
    "examples",
    "macros",
]

[workspace.package]
version = "0.1.0-alpha2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/durable-execution-sdk-rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full", "sync", "time", "rt-multi-thread"] }

# Async trait support
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging/tracing
tracing = "0.1"

# AWS SDK
aws-sdk-lambda = "1.0"
aws-config = "1.0"
aws-smithy-runtime-api = "1.0"
aws-credential-types = "1.0"
aws-sigv4 = "1.0"
aws-smithy-http = "0.63"

# HTTP client
reqwest = { version = "0.13" }
http = "1.0"
url = "2.5"
urlencoding = "2.1"

# Lambda runtime
lambda_runtime = "1"

# Hashing for deterministic IDs
blake2 = "0.10"
hex = "0.4"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }

# Regex for error pattern matching
regex = "1.10"

# Static assertions for compile-time checks
static_assertions = "1.1"

# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }

# Testing dependencies
proptest = "1.0"
tokio-test = "0.4"
tracing-subscriber = "0.3"
trybuild = "1.0"
uuid = { version = "1.0", features = ["v4"] }

# Internal crate dependencies
durable-execution-sdk = { path = "sdk", version = "0.1.0-alpha2" }
durable-execution-sdk-testing = { path = "testing", version = "0.1.0-alpha2" }
durable-execution-sdk-macros = { path = "macros", version = "0.1.0-alpha2" }
