[package]
name = "aws-durable-execution-sdk-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for AWS Durable Execution SDK"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
