[package]
name = "durable-execution-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for AWS Durable Execution SDK"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
