[package]
name = "callback_workflows"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "approval_workflow"
path = "src/main.rs"

[[bin]]
name = "simulated_approver"
path = "src/simulated_approver.rs"

[dependencies]
lambda_runtime = "1"
serde = "1.0.136"
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-durable-execution-sdk = { version = "0.1", path = "../../../aws-durable-execution-sdk" }
aws-config = "1.0"
aws-sdk-sqs = "1.0"
aws-sdk-lambda = "1.0"
aws_lambda_events = "0.15"
aws-sigv4 = "1.0"
aws-credential-types = "1.0"
aws-smithy-runtime-api = "1.0"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"
http = "1.0"